Make sure header is above rest of page (z-index)

--- a/static/sass/_suclass.scss
+++ b/static/sass/_suclass.scss
@@ -255,6 +255,8 @@ $video-thumb-url: '../themes/suclass/images/stanford-online-video-thumb.png';
 }
 
 #global-navigation {
+    z-index: 100;
+    
     .nav-wrapper .user {
         .primary a {
             &.user-link {
